k8s-manifest/identity.yml
apiVersion: v1
kind: Service
metadata:
  name: identity-svc
spec:
  type: LoadBalancer
  selector:
    app: identity
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
      nodePort: 30001
