k8s-manifest/mongodb-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  serviceName: "mongodb-svc"
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      serviceAccountName: mongodb-sa
      containers:
      - name: mongodb
        image: mongo:latest
        resources:     
          requests:    
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
        # Agar JSON data chahiye, toh use ConfigMap ya alag PVC se lao
        - name: json-import-volume 
          mountPath: /tmp/data
      volumes:
      - name: json-import-volume
        emptyDir: {} # hostPath ki jagah emptyDir use kiya taaki sync fail na ho
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard-rwo # GKE ka standard storage class
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
