k8s-manifest/post.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: post-service
    spec:
      serviceAccountName: post-sa
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - post-service
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: post-container
        image: raunakraj010/post-service:v4
        ports:
        - containerPort: 8002
        volumeMounts:
        - name: post-config-vol
          mountPath: "/etc/config"

        resources:
          requests:
            cpu: "1"
            memory: "500Mi"
          limits:
            cpu: "1"
            memory: "1Gi"
        startupProbe:
          httpGet:
            path: /health
            port: 8002
          failureThreshold: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8002
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8002
          initialDelaySeconds: 5
          periodSeconds: 10

      volumes:
      - name: post-config-vol
        configMap:
          name: post-cm
---
apiVersion: v1
kind: Service
metadata:
  name: post-svc
spec:
  type: ClusterIP
  selector:
    app: post-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8002
