k8s-manifest/cilium-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: default
  annotations:
    io.cilium/lb-service-type: NodePort
spec:
  gatewayClassName: cilium # Cilium ka default GatewayClass
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
