k8s-manifest/hhtpRoute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: social-app-route
  namespace: default
spec:
  parentRefs:
  - name: cilium-gateway
  hostnames:
  - "social.app"
  rules:
  # 1. Identity Service Routes
  - matches:
    - path: { type: PathPrefix, value: /api/v1/identity }
    - path: { type: PathPrefix, value: /identity/health } # Identity ka specific health
    backendRefs:
    - name: identity-svc
      port: 80

  # 2. Post Service Routes
  - matches:
    - path: { type: PathPrefix, value: /api/v1/post }
    - path: { type: PathPrefix, value: /health } # Post ka main health check
    backendRefs:
    - name: post-svc
      port: 80
